--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
-web:
-    build: .
-    command: python3 manage.py runserver 0.0.0.0:8000
-    volumes:
-        - .:/app
-    ports:
-        - "8000:8000"
-    links:
-        - db
-
 db:
-    image: postgres:9.4
-    environment:
-        POSTGRES_PASSWORD: postgres
+  image: postgres:9.4
+  environment:
+    - POSTGRES_PASSWORD=mysecretpassword
+web:
+  build: .
+  command: python3 manage.py runserver 0.0.0.0:8000
+  volumes:
+    - .:/app:z
+  ports:
+    - "9002:8000"
+  links:
+    - db
