--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-*.pyc
-.idea
+.DS_Store
+venv
 env
-celerybeat-schedule
 db.sqlite3
+__pycache__
+*.pyc
+celerybeat.pid
+celerybeat-schedule
+celerybeat-schedule.db
+whoosh_index/
